syntax = "proto3";

package slatedb;

option go_package = ".";

// Define the service
service SlateDB {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  string message = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  string message = 2;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  string message = 1;
}
